--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "emma/http-manager",
-    "description": "A PHP 8.0+ Attributes based Http Routing. Can be used for all cases, MVC and Middleware -  Class/Method/Function",
+    "description": "A PHP 8.0+ Attributes Based HTTP Routing. Can be used for all cases, MVC and Middleware -  Class/Method/Function",
     "authors": [
         {
             "name": "Ademola Aina",
@@ -12,7 +12,7 @@
     "require": {
         "php": ">=8.0",
         "emma/di": "^1.2.0",
-        "emma/common": "^1.1.4"
+        "emma/common": "^1.0.0"
     },
     "autoload": {
         "psr-4": {
